--- a/requirements.txt
+++ b/requirements.txt
@@ -23,10 +23,21 @@ flatbuffers==23.5.26
 fonttools==4.43.0
 frozenlist==1.4.0
 gast==0.5.4
+google-api-core==2.12.0
 google-auth==2.23.3
 google-auth-oauthlib==1.0.0
+google-cloud-aiplatform==1.35.0
+google-cloud-bigquery==3.12.0
+google-cloud-core==2.3.3
+google-cloud-resource-manager==1.10.4
+google-cloud-storage==2.12.0
+google-crc32c==1.5.0
 google-pasta==0.2.0
+google-resumable-media==2.6.0
+googleapis-common-protos==1.61.0
+grpc-google-iam-v1==0.12.6
 grpcio==1.59.0
+grpcio-status==1.59.0
 h5py==3.10.0
 idna==3.4
 ipykernel==6.25.1
@@ -58,6 +69,7 @@ Pillow==10.0.1
 platformdirs==3.10.0
 prettytable==3.9.0
 prompt-toolkit==3.0.39
+proto-plus==1.22.3
 protobuf==4.24.4
 psutil==5.9.5
 ptyprocess==0.7.0
@@ -74,6 +86,7 @@ requests-oauthlib==1.3.1
 rsa==4.9
 scikit-learn==1.3.1
 scipy==1.11.3
+shapely==2.0.2
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.2
@@ -91,6 +104,7 @@ traitlets==5.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.6
+vertexai==0.0.1
 wcwidth==0.2.6
 Werkzeug==3.0.0
 wrapt==1.14.1
